exports[`eslint-friendly-formatter --eff-filter option should produce the expected output for the given input: single-error 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m  path is defined but never used  
  [4m[90mindex.js:8:2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m


[33m[1m✘ 3 problems (0 errors, 1 warning)
[22m[39m

[33mWarnings:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: basic 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   path is defined but never used                    
  [4m[90m/home/usr/roy/index.js:8:2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   expect is defined but never used                  
  [4m[90m/home/usr/roy/test/specs/index.js:3:6[39m[24m
  [90m  var expect = require( \'chai\' ).expect;[39m
  [90m      ^[39m

  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   path is defined but never used                    
  [4m[90m/home/usr/roy/test/specs/index.js:4:6[39m[24m
  [90m  var path = require( \'path\' );[39m
  [90m      ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m            Expected { after \'if\' condition                   
  [4m[90m/home/usr/roy/test/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m[90m/home/usr/roy/test/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 5 problems (2 errors, 3 warnings)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m

[33mWarnings:
[39m  3  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: fatal 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m  Unexpected token {  
  [4m[90m/home/usr/roy/index.js:3:13[39m[24m
  


[31m[1m✘ 1 problem (1 error, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: missing-line-column 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 path is defined but never used                    
  [4m[90m/home/usr/roy/index.js:0:0[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 Expected { after \'if\' condition                   
  [4m[90m/home/usr/roy/test/runner.js:0:0[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m[90m/home/usr/roy/test/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m

[33mWarnings:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: missing-messages 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m            Expected { after \'if\' condition                   
  [4m[90m/home/usr/roy/test/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m[90m/home/usr/roy/test/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 2 problems (2 errors, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: missing-rule-id 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 path is defined but never used                    
  [4m[90m/home/usr/roy/index.js:8:2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 Expected { after \'if\' condition                   
  [4m[90m/home/usr/roy/test/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m[90m/home/usr/roy/test/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m

[33mWarnings:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: single-error 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   path is defined but never used                    
  [4m[90m/home/usr/roy/index.js:8:2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m            Expected { after \'if\' condition                   
  [4m[90m/home/usr/roy/test/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m[90m/home/usr/roy/test/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m

[33mWarnings:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: basic 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m   path is defined but never used                    
  [4m/home/usr/roy/index.js:8:2[24m
    path = require( \'path\' ),
    ^

  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m   expect is defined but never used                  
  [4m/home/usr/roy/test/specs/index.js:3:6[24m
    var expect = require( \'chai\' ).expect;
        ^

  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m   path is defined but never used                    
  [4m/home/usr/roy/test/specs/index.js:4:6[24m
    var path = require( \'path\' );
        ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m            Expected { after \'if\' condition                   
  [4m/home/usr/roy/test/runner.js:41:2[24m
    if ( err ) console.log( \'failed tests: \' + err );
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m/home/usr/roy/test/runner.js:42:2[24m
    process.exit( exitCode );
    ^


[31m[1m✘ 5 problems (2 errors, 3 warnings)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m
  1  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m

[33mWarnings:
[39m  3  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: fatal 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[24m  Unexpected token {  
  [4m/home/usr/roy/index.js:3:13[24m
  


[31m[1m✘ 1 problem (1 error, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mundefined[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: missing-line-column 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[24m                 path is defined but never used                    
  [4m/home/usr/roy/index.js:0:0[24m
    path = require( \'path\' ),
  ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[24m                 Expected { after \'if\' condition                   
  [4m/home/usr/roy/test/runner.js:0:0[24m
    if ( err ) console.log( \'failed tests: \' + err );
  ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m/home/usr/roy/test/runner.js:42:2[24m
    process.exit( exitCode );
    ^


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m
  1  [4mhttp://eslint.org/docs/rules/[37mundefined[39m[24m

[33mWarnings:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mundefined[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: missing-messages 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m            Expected { after \'if\' condition                   
  [4m/home/usr/roy/test/runner.js:41:2[24m
    if ( err ) console.log( \'failed tests: \' + err );
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m/home/usr/roy/test/runner.js:42:2[24m
    process.exit( exitCode );
    ^


[31m[1m✘ 2 problems (2 errors, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m
  1  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: missing-rule-id 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[24m                 path is defined but never used                    
  [4m/home/usr/roy/index.js:8:2[24m
    path = require( \'path\' ),
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[24m                 Expected { after \'if\' condition                   
  [4m/home/usr/roy/test/runner.js:41:2[24m
    if ( err ) console.log( \'failed tests: \' + err );
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m/home/usr/roy/test/runner.js:42:2[24m
    process.exit( exitCode );
    ^


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m
  1  [4mhttp://eslint.org/docs/rules/[37mundefined[39m[24m

[33mWarnings:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mundefined[39m[24m"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: single-error 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m   path is defined but never used                    
  [4m/home/usr/roy/index.js:8:2[24m
    path = require( \'path\' ),
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m            Expected { after \'if\' condition                   
  [4m/home/usr/roy/test/runner.js:41:2[24m
    if ( err ) console.log( \'failed tests: \' + err );
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m/home/usr/roy/test/runner.js:42:2[24m
    process.exit( exitCode );
    ^


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m
  1  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m

[33mWarnings:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m"
`;

exports[`eslint-friendly-formatter custom rules links open google search should produce the expected output for the given input: single-error 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m    path is defined but never used                    
  [4m[90mindex.js:8:2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttps://google.com/#q=[37mplugin-rule%2Fcurly[90m[39m[24m      Expected { after \'if\' condition                   
  [4m[90mtest/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttps://google.com/#q=[37mreact%2Fno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m[90mtest/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttps://google.com/#q=[37mreact%2Fno-process-exit[90m[39m[24m
  1  [4m[90mhttps://google.com/#q=[37mplugin-rule%2Fcurly[90m[39m[24m

[33mWarnings:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: basic 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   path is defined but never used                    
  [4m[90mindex.js:8:2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   expect is defined but never used                  
  [4m[90mtest/specs/index.js:3:6[39m[24m
  [90m  var expect = require( \'chai\' ).expect;[39m
  [90m      ^[39m

  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   path is defined but never used                    
  [4m[90mtest/specs/index.js:4:6[39m[24m
  [90m  var path = require( \'path\' );[39m
  [90m      ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m            Expected { after \'if\' condition                   
  [4m[90mtest/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m[90mtest/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 5 problems (2 errors, 3 warnings)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m

[33mWarnings:
[39m  3  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: fatal 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m  Unexpected token {  
  [4m[90mindex.js:3:13[39m[24m
  


[31m[1m✘ 1 problem (1 error, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: missing-line-column 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 path is defined but never used                    
  [4m[90mindex.js:0:0[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 Expected { after \'if\' condition                   
  [4m[90mtest/runner.js:0:0[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m[90mtest/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m

[33mWarnings:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: missing-messages 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m            Expected { after \'if\' condition                   
  [4m[90mtest/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m[90mtest/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 2 problems (2 errors, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: missing-rule-id 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 path is defined but never used                    
  [4m[90mindex.js:8:2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 Expected { after \'if\' condition                   
  [4m[90mtest/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m[90mtest/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m

[33mWarnings:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: single-error 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   path is defined but never used                    
  [4m[90mindex.js:8:2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m            Expected { after \'if\' condition                   
  [4m[90mtest/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4m[90mtest/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m

[33mWarnings:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: basic 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m   path is defined but never used                    
  [4mindex.js:8:2[24m
    path = require( \'path\' ),
    ^

  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m   expect is defined but never used                  
  [4mtest/specs/index.js:3:6[24m
    var expect = require( \'chai\' ).expect;
        ^

  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m   path is defined but never used                    
  [4mtest/specs/index.js:4:6[24m
    var path = require( \'path\' );
        ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m            Expected { after \'if\' condition                   
  [4mtest/runner.js:41:2[24m
    if ( err ) console.log( \'failed tests: \' + err );
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4mtest/runner.js:42:2[24m
    process.exit( exitCode );
    ^


[31m[1m✘ 5 problems (2 errors, 3 warnings)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m
  1  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m

[33mWarnings:
[39m  3  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: fatal 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[24m  Unexpected token {  
  [4mindex.js:3:13[24m
  


[31m[1m✘ 1 problem (1 error, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mundefined[39m[24m"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: missing-line-column 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[24m                 path is defined but never used                    
  [4mindex.js:0:0[24m
    path = require( \'path\' ),
  ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[24m                 Expected { after \'if\' condition                   
  [4mtest/runner.js:0:0[24m
    if ( err ) console.log( \'failed tests: \' + err );
  ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4mtest/runner.js:42:2[24m
    process.exit( exitCode );
    ^


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m
  1  [4mhttp://eslint.org/docs/rules/[37mundefined[39m[24m

[33mWarnings:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mundefined[39m[24m"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: missing-messages 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m            Expected { after \'if\' condition                   
  [4mtest/runner.js:41:2[24m
    if ( err ) console.log( \'failed tests: \' + err );
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4mtest/runner.js:42:2[24m
    process.exit( exitCode );
    ^


[31m[1m✘ 2 problems (2 errors, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m
  1  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: missing-rule-id 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[24m                 path is defined but never used                    
  [4mindex.js:8:2[24m
    path = require( \'path\' ),
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[24m                 Expected { after \'if\' condition                   
  [4mtest/runner.js:41:2[24m
    if ( err ) console.log( \'failed tests: \' + err );
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4mtest/runner.js:42:2[24m
    process.exit( exitCode );
    ^


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m
  1  [4mhttp://eslint.org/docs/rules/[37mundefined[39m[24m

[33mWarnings:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mundefined[39m[24m"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: single-error 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m   path is defined but never used                    
  [4mindex.js:8:2[24m
    path = require( \'path\' ),
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m            Expected { after \'if\' condition                   
  [4mtest/runner.js:41:2[24m
    if ( err ) console.log( \'failed tests: \' + err );
    ^

  [31m✘[39m  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m  Don\'t use process.exit(); throw an error instead  
  [4mtest/runner.js:42:2[24m
    process.exit( exitCode );
    ^


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-process-exit[39m[24m
  1  [4mhttp://eslint.org/docs/rules/[37mcurly[39m[24m

[33mWarnings:
[39m  1  [4mhttp://eslint.org/docs/rules/[37mno-unused-vars[39m[24m"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: basic 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [37mno-unused-vars[39m   path is defined but never used                    
  [4m[90mindex.js:8:2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [33m⚠[39m  [37mno-unused-vars[39m   expect is defined but never used                  
  [4m[90mtest/specs/index.js:3:6[39m[24m
  [90m  var expect = require( \'chai\' ).expect;[39m
  [90m      ^[39m

  [33m⚠[39m  [37mno-unused-vars[39m   path is defined but never used                    
  [4m[90mtest/specs/index.js:4:6[39m[24m
  [90m  var path = require( \'path\' );[39m
  [90m      ^[39m

  [31m✘[39m  [37mcurly[39m            Expected { after \'if\' condition                   
  [4m[90mtest/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [37mno-process-exit[39m  Don\'t use process.exit(); throw an error instead  
  [4m[90mtest/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 5 problems (2 errors, 3 warnings)
[22m[39m

[31mErrors:
[39m  1  [37mno-process-exit[39m
  1  [37mcurly[39m

[33mWarnings:
[39m  3  [37mno-unused-vars[39m"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: fatal 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m    Unexpected token {  
  [4m[90mindex.js:3:13[39m[24m
  


[31m[1m✘ 1 problem (1 error, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [37mundefined[39m"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: missing-line-column 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m                   path is defined but never used                    
  [4m[90mindex.js:0:0[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m^[39m

  [31m✘[39m                   Expected { after \'if\' condition                   
  [4m[90mtest/runner.js:0:0[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m^[39m

  [31m✘[39m  [37mno-process-exit[39m  Don\'t use process.exit(); throw an error instead  
  [4m[90mtest/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [37mno-process-exit[39m
  1  [37mundefined[39m

[33mWarnings:
[39m  1  [37mundefined[39m"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: missing-messages 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m  [37mcurly[39m            Expected { after \'if\' condition                   
  [4m[90mtest/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [37mno-process-exit[39m  Don\'t use process.exit(); throw an error instead  
  [4m[90mtest/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 2 problems (2 errors, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [37mno-process-exit[39m
  1  [37mcurly[39m"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: missing-rule-id 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m                   path is defined but never used                    
  [4m[90mindex.js:8:2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [31m✘[39m                   Expected { after \'if\' condition                   
  [4m[90mtest/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [37mno-process-exit[39m  Don\'t use process.exit(); throw an error instead  
  [4m[90mtest/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [37mno-process-exit[39m
  1  [37mundefined[39m

[33mWarnings:
[39m  1  [37mundefined[39m"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: single-error 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [37mno-unused-vars[39m   path is defined but never used                    
  [4m[90mindex.js:8:2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [31m✘[39m  [37mcurly[39m            Expected { after \'if\' condition                   
  [4m[90mtest/runner.js:41:2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [37mno-process-exit[39m  Don\'t use process.exit(); throw an error instead  
  [4m[90mtest/runner.js:42:2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [37mno-process-exit[39m
  1  [37mcurly[39m

[33mWarnings:
[39m  1  [37mno-unused-vars[39m"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: basic 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   path is defined but never used                    
  [90m/home/usr/roy/index.js:8:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Findex.js&line=8&column=2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   expect is defined but never used                  
  [90m/home/usr/roy/test/specs/index.js:3:6[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Fspecs%2Findex.js&line=3&column=6[39m[24m
  [90m  var expect = require( \'chai\' ).expect;[39m
  [90m      ^[39m

  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   path is defined but never used                    
  [90m/home/usr/roy/test/specs/index.js:4:6[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Fspecs%2Findex.js&line=4&column=6[39m[24m
  [90m  var path = require( \'path\' );[39m
  [90m      ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m            Expected { after \'if\' condition                   
  [90m/home/usr/roy/test/runner.js:41:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=41&column=2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [90m/home/usr/roy/test/runner.js:42:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=42&column=2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 5 problems (2 errors, 3 warnings)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m

[33mWarnings:
[39m  3  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: fatal 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m  Unexpected token {  
  [90m/home/usr/roy/index.js:3:13[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Findex.js&line=3&column=13[39m[24m
  


[31m[1m✘ 1 problem (1 error, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: missing-line-column 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 path is defined but never used                    
  [90m/home/usr/roy/index.js:0:0[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Findex.js&line=0&column=0[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 Expected { after \'if\' condition                   
  [90m/home/usr/roy/test/runner.js:0:0[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=0&column=0[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [90m/home/usr/roy/test/runner.js:42:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=42&column=2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m

[33mWarnings:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: missing-messages 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m            Expected { after \'if\' condition                   
  [90m/home/usr/roy/test/runner.js:41:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=41&column=2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [90m/home/usr/roy/test/runner.js:42:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=42&column=2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 2 problems (2 errors, 0 warnings)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: missing-rule-id 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 path is defined but never used                    
  [90m/home/usr/roy/index.js:8:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Findex.js&line=8&column=2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[39m[24m                 Expected { after \'if\' condition                   
  [90m/home/usr/roy/test/runner.js:41:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=41&column=2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [90m/home/usr/roy/test/runner.js:42:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=42&column=2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m

[33mWarnings:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mundefined[90m[39m[24m"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: single-error 1`] = `
"]50;CurrentDir=/path/to/working/directory
  [33m⚠[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m   path is defined but never used                    
  [90m/home/usr/roy/index.js:8:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Findex.js&line=8&column=2[39m[24m
  [90m  path = require( \'path\' ),[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m            Expected { after \'if\' condition                   
  [90m/home/usr/roy/test/runner.js:41:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=41&column=2[39m[24m
  [90m  if ( err ) console.log( \'failed tests: \' + err );[39m
  [90m  ^[39m

  [31m✘[39m  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m  Don\'t use process.exit(); throw an error instead  
  [90m/home/usr/roy/test/runner.js:42:2[39m
  [4m[90meditor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=42&column=2[39m[24m
  [90m  process.exit( exitCode );[39m
  [90m  ^[39m


[31m[1m✘ 3 problems (2 errors, 1 warning)
[22m[39m

[31mErrors:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-process-exit[90m[39m[24m
  1  [4m[90mhttp://eslint.org/docs/rules/[37mcurly[90m[39m[24m

[33mWarnings:
[39m  1  [4m[90mhttp://eslint.org/docs/rules/[37mno-unused-vars[90m[39m[24m"
`;
